infra/vpc.yaml
---
Metadata:
  AWSToolsMetrics:
    IaC_Generator: arn:aws:cloudformation:us-east-1:500648861660:generatedTemplate/2f7a3c1e-cfcf-4fb4-a07a-7868b46d42f1
Parameters:
  KeyName:
    Default: allan-key
    Type: String
    Description: Name of an existing EC2 KeyPair to enable SSH access
  KeyName2:
    Default: allan-key
    Type: String
    Description: Name of an existing EC2 KeyPair to enable SSH access
Resources:
  EC2SubnetT0:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: EC2VPC
      AvailabilityZoneId: use1-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.4.0/24
      Ipv6Native: false
      Tags:
      - Value: allan-repo-vpc1-private-subnet2
        Key: Name
  Route53ResolverResolverRuleAssociation:
    UpdateReplacePolicy: Retain
    Type: AWS::Route53Resolver::ResolverRuleAssociation
    DeletionPolicy: Retain
    Properties:
      VPCId:
        Ref: EC2VPC
      ResolverRuleId: rslvr-autodefined-rr-internet-resolver
      Name: System Rule Association
  EC2RouteJr:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      DestinationIpv6CidrBlock: 2600:1f18:5767:ff00::/56
      RouteTableId:
        Ref: EC2RouteTableMS
      GatewayId: local
      VpcEndpointId: local
  EC2VolumeWM:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Volume
    DeletionPolicy: Retain
    Properties:
      MultiAttachEnabled: false
      SnapshotId: snap-04fa8e92a540088d7
      VolumeType: gp3
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: use1-az2
      AvailabilityZone: us-east-1a
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2SubnetRouteTableAssociationCQ:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTablePI
      SubnetId:
        Ref: EC2SubnetT0
  EC2InstanceU5:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Instance
    DeletionPolicy: Retain
    Properties:
      Tenancy: default
      PrivateIpAddress: 10.0.1.136
      InstanceInitiatedShutdownBehavior: stop
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: snap-04fa8e92a540088d7
          VolumeType: gp3
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      IamInstanceProfile:
        Ref: IAMInstanceProfileEC2SSMRole
      SubnetId:
        Ref: EC2SubnetP5
      SecurityGroupIds:
      - sg-0214bfbadc75b5344
      EbsOptimized: true
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ''
      VpcId: vpc-037688fcde471f5ee
      State:
        Code: '16'
        Name: running
      NetworkInterfaces:
      - Ipv6Addresses: []
        SubnetId:
          Ref: EC2SubnetP5
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId:
          Ref: EC2NetworkInterface
        DeviceIndex: '0'
      ImageId: ami-07ff62358b87c7116
      InstanceType: t3.micro
      Monitoring: false
      Tags:
      - Value: allan-repo-vpc1-bastion
        Key: Name
      CreditSpecification:
        CPUCredits: unlimited
  EC2Subnet:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: EC2VPC
      AvailabilityZoneId: use1-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.3.0/24
      Ipv6Native: false
      Tags:
      - Value: allan-repo-vpc1-public-subnet2
        Key: Name
  EC2SecurityGroup:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: launch-wizard-1 created 2026-01-11T06:23:14.340Z
      GroupName: launch-wizard-1
      VpcId:
        Ref: EC2VPC
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      - CidrIpv6: "::/0"
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetNetworkAclAssociation:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      NetworkAclId:
        Ref: EC2NetworkAcl
      SubnetId:
        Ref: EC2SubnetHh
  EC2RouteNm:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTableMS
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EC2InternetGateway
      VpcEndpointId: igw-001fbc18d15b90cb9
  EC2RouteOI:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      DestinationIpv6CidrBlock: "::/0"
      RouteTableId:
        Ref: EC2RouteTableMS
      GatewayId:
        Ref: EC2InternetGateway
      VpcEndpointId: igw-001fbc18d15b90cb9
  EC2SecurityGroupCi:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: launch-wizard-3 created 2026-01-11T06:29:56.607Z
      GroupName: launch-wizard-3
      VpcId:
        Ref: EC2VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        SourceSecurityGroupId: sg-0214bfbadc75b5344
        ToPort: 22
        SourceSecurityGroupOwnerId: '500648861660'
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetNetworkAclAssociationSi:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      NetworkAclId:
        Ref: EC2NetworkAcl
      SubnetId:
        Ref: EC2SubnetP5
  EC2VolumeAttachment:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VolumeAttachment
    DeletionPolicy: Retain
    Properties:
      InstanceId: i-078252df42f40036e
      VolumeId: vol-074ce46ba06189972
      Device: "/dev/xvda"
  EC2NatGateway:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::NatGateway
    DeletionPolicy: Retain
    Properties:
      ConnectivityType: public
      VpcId: vpc-037688fcde471f5ee
      AvailabilityZoneAddresses:
      - AvailabilityZoneId: use1-az2
        AvailabilityZone: us-east-1a
        AllocationIds:
        - eipalloc-0bb871b3bc764d6d2
      - AvailabilityZoneId: use1-az1
        AvailabilityZone: us-east-1d
        AllocationIds:
        - eipalloc-045db4ed7b7cccd84
      AvailabilityMode: regional
      Tags:
      - Value: allan-repo-vpc1-ngw
        Key: Name
  EC2RouteBU:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTableMS
      DestinationCidrBlock:
        Fn::GetAtt:
        - EC2VPC
        - CidrBlock
      GatewayId: local
      VpcEndpointId: local
  EC2SubnetP5:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: EC2VPC
      AvailabilityZoneId: use1-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.1.0/24
      Ipv6Native: false
      Ipv6CidrBlock: 2600:1f18:5767:ff00::/56
      Tags:
      - Value: allan-repo-vpc1-public-subnet1
        Key: Name
  EC2RouteTablePI:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId:
        Ref: EC2VPC
      Tags:
      - Value: allan-vpc-vpc1-privateRT
        Key: Name
  EC2SubnetHh:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId:
        Ref: EC2VPC
      AvailabilityZoneId: use1-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.0.2.0/24
      Ipv6Native: false
      Tags:
      - Value: allan-repo-vpc1-private-subnet1
        Key: Name
  EC2SubnetRouteTableAssociationUJ:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTableMS
      SubnetId:
        Ref: EC2SubnetP5
  IAMRoleEC2SSMRole:
    UpdateReplacePolicy: Retain
    Type: AWS::IAM::Role
    DeletionPolicy: Retain
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      MaxSessionDuration: 3600
      RoleName: EC2-SSM-Role
      Description: Allows EC2 instances to call AWS services on your behalf.
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
  EC2SubnetRouteTableAssociationBU:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTablePI
      SubnetId:
        Ref: EC2SubnetHh
  EC2Instance:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Instance
    DeletionPolicy: Retain
    Properties:
      Tenancy: default
      PrivateIpAddress: 10.0.2.84
      InstanceInitiatedShutdownBehavior: stop
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: snap-04fa8e92a540088d7
          VolumeType: gp3
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      IamInstanceProfile:
        Ref: IAMInstanceProfileEC2SSMRole
      SubnetId:
        Ref: EC2SubnetHh
      SecurityGroupIds:
      - sg-0fa8b7a57c01198bc
      EbsOptimized: true
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ''
      VpcId: vpc-037688fcde471f5ee
      State:
        Code: '16'
        Name: running
      NetworkInterfaces:
      - Ipv6Addresses: []
        SubnetId:
          Ref: EC2SubnetHh
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId:
          Ref: EC2NetworkInterfaceEI
        DeviceIndex: '0'
      ImageId: ami-07ff62358b87c7116
      InstanceType: t3.micro
      Monitoring: false
      Tags:
      - Value: allan-repo-vpc1-PrivateInstance
        Key: Name
      CreditSpecification:
        CPUCredits: unlimited
  EC2NetworkInterfaceEI:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::NetworkInterface
    DeletionPolicy: Retain
    Properties:
      SourceDestCheck: true
      InterfaceType: interface
      Description: ''
      PrivateIpAddress: 10.0.2.84
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - sg-0fa8b7a57c01198bc
      Ipv6Prefixes: []
      SubnetId:
        Ref: EC2SubnetHh
      Tags: []
  EC2Volume:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Volume
    DeletionPolicy: Retain
    Properties:
      MultiAttachEnabled: false
      SnapshotId: snap-04fa8e92a540088d7
      VolumeType: gp3
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: use1-az2
      AvailabilityZone: us-east-1a
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2Route:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EC2InternetGateway
      VpcEndpointId: igw-001fbc18d15b90cb9
  EC2RouteRP:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTablePI
      DestinationCidrBlock:
        Fn::GetAtt:
        - EC2VPC
        - CidrBlock
      GatewayId: local
      VpcEndpointId: local
  EC2SubnetNetworkAclAssociationEG:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      NetworkAclId:
        Ref: EC2NetworkAcl
      SubnetId:
        Ref: EC2SubnetT0
  IAMInstanceProfileEC2SSMRole:
    UpdateReplacePolicy: Retain
    Type: AWS::IAM::InstanceProfile
    DeletionPolicy: Retain
    Properties:
      Path: "/"
      Roles:
      - Ref: IAMRoleEC2SSMRole
      InstanceProfileName:
        Ref: IAMRoleEC2SSMRole
  EC2SecurityGroupN6:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: launch-wizard-2 created 2026-01-11T06:26:56.446Z
      GroupName: launch-wizard-2
      VpcId:
        Ref: EC2VPC
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      - CidrIpv6: "::/0"
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2VPC:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VPC
    DeletionPolicy: Retain
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      InstanceTenancy: default
      EnableDnsHostnames: false
      Tags:
      - Value: allan-repo-vpc1
        Key: Name
  EC2NetworkInterface:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::NetworkInterface
    DeletionPolicy: Retain
    Properties:
      SourceDestCheck: true
      InterfaceType: interface
      Description: ''
      PrivateIpAddress: 10.0.1.136
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - sg-0214bfbadc75b5344
      Ipv6Prefixes: []
      SubnetId:
        Ref: EC2SubnetP5
      Tags: []
  EC2RouteTable:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId:
        Ref: EC2VPC
  EC2RouteTableMS:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId:
        Ref: EC2VPC
      Tags:
      - Value: allan-repo-vpc1-publicRT
        Key: Name
  EC2InternetGateway:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::InternetGateway
    DeletionPolicy: Retain
    Properties:
      Tags:
      - Value: allan-repo-igw
        Key: Name
  EC2SubnetRouteTableAssociation:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      RouteTableId:
        Ref: EC2RouteTableMS
      SubnetId:
        Ref: EC2Subnet
  EC2RouteYk:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      DestinationIpv6CidrBlock: 2600:1f18:5767:ff00::/56
      RouteTableId:
        Ref: EC2RouteTablePI
      GatewayId: local
      VpcEndpointId: local
  EC2RouteVH:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      NatGatewayId:
        Ref: EC2NatGateway
      RouteTableId:
        Ref: EC2RouteTablePI
      DestinationCidrBlock: 0.0.0.0/0
  EC2SecurityGroupUb:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: default VPC security group
      GroupName: default
      VpcId:
        Ref: EC2VPC
      SecurityGroupIngress:
      - IpProtocol: "-1"
        FromPort: -1
        SourceSecurityGroupId:
          Fn::GetAtt:
          - EC2VPC
          - DefaultSecurityGroup
        ToPort: -1
        SourceSecurityGroupOwnerId: '500648861660'
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      - CidrIpv6: "::/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2NetworkAcl:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::NetworkAcl
    DeletionPolicy: Retain
    Properties:
      VpcId:
        Ref: EC2VPC
      Tags: []
  EC2SubnetCidrBlock:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetCidrBlock
    DeletionPolicy: Retain
    Properties:
      Ipv6CidrBlock: 2600:1f18:5767:ff00::/56
      SubnetId:
        Ref: EC2SubnetP5
  EC2RouteTableDb:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId:
        Ref: EC2VPC
  EC2VolumeAttachmentDj:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VolumeAttachment
    DeletionPolicy: Retain
    Properties:
      InstanceId: i-02a4f59da21e24cd4
      VolumeId: vol-0c83ab6a139586612
      Device: "/dev/xvda"
  EC2SubnetNetworkAclAssociationDT:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      NetworkAclId:
        Ref: EC2NetworkAcl
      SubnetId:
        Ref: EC2Subnet
